# live-collab

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
live-collab-receiver/: Cargo.toml
live-collab-receiver/src/: lib.rs
live-collab-sender/: Cargo.toml
live-collab-sender/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
