[package]
name = "live_collab_sender"
version = "0.1.0"
edition = "2021"
authors = ["peatreat"]
license = "ISC"

description = "A simple plugin send audio to someone"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", package = "nih_plug_egui" }

shared = { path = "../shared" }

atomic_float = "0.1"
tokio = "1.44.2"
webrtc = "0.12.0"
base64 = "0.22.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
lazy_static = "1.5.0"
bytes = "1.10.1"
bytemuck = { version = "1.22.0", features = ["extern_crate_alloc"] }
crossbeam = "0.8.4"
winapi = "0.3.9"
libc = "0.2.171"